# ai-crewai-python-generator

./: README.md  pyproject.toml
output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py.py
src/mycrewdemo/: crew.py  main.py
src/mycrewdemo/config/: agents.yaml  tasks.yaml
